# MnistStylist

./: .gitignore  README.md  pyproject.toml
mnist_stylist/: start.ipynb
